* Changed so that the default suppression value for methods returning java.lang.String is null to conform with EasyMock and Mockito.
* Added Whitebox.getFieldsOfType(..) that can be used to retreive all fields of a particular type in a class hierarchy.
* Added support for mock policies. A mock policy can be used to make it easier to unit test some code with PowerMock in isolation from a certain framework. Two mock policies are available in the EasyMock API, Slf4jMockPolicy and Log4jMockPolicy which helps with mocking log4j or slf4j in PowerMock. Use the @MockPolicy annotation at the class-level of the test case to use one of the mock policies.

Change log 1.0 (released 2008-11-18)
------------------------------------
* Changed the pom.xml for the tutorial project so that it's now a stand-alone project.
* Fixed so that replay all and verify all also works for createMockAndExpectNew.
* Added method createStrictMockAndExpectNew and createNiceMockAndExpectNew
* Fixed so that suppressMethodCode returns an empty string for methods returning String. 
* Fixed a bug in the byte-code manipulation of constructors, modifiers that doesn't need change are now preserved.
* Added the PrepareEverythingForTestAnnotation, this annotation can be used to tell PowerMock to modify all classes.
* MockGateway doMethodCall now also supports java proxy types.
* Implemented the ability to set and get internal state based on field type. This means that you get more refactor friendly code while still being able to set or get internal state.
* Implemented the ability to set internal state based on an object type, i.e. you can now do setInternalState(object, myServiceImpl) to set the first field in object which can be assignable to myServiceImpl. This means that you get more refactor friendly code while still being able to set internal state.
* Get and setInternalState now separates between class and instance fields, i.e. you cannot set static fields by specifying an instance object.