@@ -1,0 +1,61 @@
+<?xml version="1.0"?><project>
+  <parent>
+    <artifactId>powermock-examples</artifactId>
+    <groupId>org.powermock.examples</groupId>
+    <version>1.1-SNAPSHOT</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.powermock.examples</groupId>
+  <artifactId>powermock-examples-jcl</artifactId>
+  <name>jcl</name>
+  <version>1.1-SNAPSHOT</version>
+  <url>http://maven.apache.org</url>
+  <dependencies>
+      <dependency>
+         <groupId>org.powermock.api</groupId>
+         <artifactId>powermock-api-easymock</artifactId>
+         <version>${version}</version>
+      </dependency>      
+      <dependency>
+         <groupId>log4j</groupId>
+         <artifactId>log4j</artifactId>
+         <version>1.2.15</version>
+         <exclusions>
+            <exclusion>
+               <groupId>com.sun.jmx</groupId>
+               <artifactId>jmxri</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>com.sun.jdmk</groupId>
+               <artifactId>jmxtools</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>javax.jms</groupId>
+               <artifactId>jms</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.powermock.modules</groupId>
+         <artifactId>powermock-module-junit4
+         </artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.4</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.easymock</groupId>
+         <artifactId>easymockclassextension</artifactId>
+         <scope>test</scope>
+      </dependency>
+     <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency> 
+   </dependencies>
+</project>
